@@ -31,9 +31,9 @@ messages -> LayerTreeCoordinatorProxy {
     RemoveTileForLayer(uint32_t layerID, int tileID)
     CreateUpdateAtlas(int atlasID, WebKit::ShareableSurface::Handle handle)
     RemoveUpdateAtlas(int atlasID)
-    CreateImageBacking(uintptr_t imageID)
-    UpdateImageBacking(uintptr_t imageID, WebKit::ShareableSurface::Handle handle)
-    RemoveImageBacking(uintptr_t imageID)
+    CreateImageBacking(uint64_t imageID)
+    UpdateImageBacking(uint64_t imageID, WebKit::ShareableSurface::Handle handle)
+    RemoveImageBacking(uint64_t imageID)
     DidRenderFrame(WebCore::IntSize contentsSize, WebCore::IntRect coveredRect)
     DidChangeScrollPosition(WebCore::IntPoint position)
     SetLayerAnimations(uint32_t id, WebCore::GraphicsLayerAnimations animations)
